--- a/index.html
+++ b/index.html
@@ -33,20 +33,14 @@
             font-size: 16px;
             cursor: pointer;
         }
-
-        #qrcode {
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
     <pre id="ascii"></pre>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
-    <button id="snapshotButton">Take Snapshot</button>
-    <div id="qrcode"></div>
+    <!--- <button id="snapshotButton">Take Snapshot</button>      -->
 
     <script src="ascii.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
 </html>
